--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
-    "astro": "^2.1.2",
+    "astro": "^2.1.3",
     "astro-compress": "^1.1.35",
     "astro-icon": "^0.8.0",
     "eslint": "^8.36.0",
@@ -45,6 +45,7 @@
     "node": ">=16.12.0"
   },
   "dependencies": {
+    "@astrojs/vercel": "^3.2.1",
     "astro-sanity": "^1.1.3"
   }
 }
