--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "description": "A template to make your website using Astro + Tailwind CSS.",
   "version": "0.9.8",
   "private": true,
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
+    "postbuild": "node scripts/fix-vercel-runtime.cjs",
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
